@@ -2,55 +2,174 @@ package se.liu.ida.hefquin.engine.wrappers.lpgwrapper.impl;
 
 import org.apache.jena.graph.Node;
 import org.apache.jena.graph.Triple;
+import se.liu.ida.hefquin.engine.query.BGP;
 import se.liu.ida.hefquin.engine.query.TriplePattern;
 import se.liu.ida.hefquin.engine.query.impl.QueryPatternUtils;
+import se.liu.ida.hefquin.engine.query.impl.TriplePatternImpl;
 import se.liu.ida.hefquin.engine.utils.Pair;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.LPG2RDFConfiguration;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.SPARQLStar2CypherTranslator;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.data.impl.LPGNode;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.CypherMatchQuery;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.CypherQuery;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.CypherVar;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.CypherUnionQueryImpl;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.UnwindIteratorImpl;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.condition.*;
+import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.expression.*;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.match.EdgeMatchClause;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.match.NodeMatchClause;
-import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.query.impl.returns.*;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.utils.CypherQueryBuilder;
+import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.utils.CypherQueryCombinator;
 import se.liu.ida.hefquin.engine.wrappers.lpgwrapper.utils.CypherVarGenerator;
 
-import java.util.*;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTranslator {
 
     @Override
+    public Pair<CypherQuery, Map<CypherVar, Node>> translateBGP(final BGP bgp, final LPG2RDFConfiguration conf) {
+        final Set<Node> certainNodes = new HashSet<>();
+        final Set<Node> certainEdgeLabels = new HashSet<>();
+        final Set<Node> certainNodeLabels = new HashSet<>();
+        final Set<Node> certainPropertyNames = new HashSet<>();
+        final Set<Node> certainPropertyValues = new HashSet<>();
+        for (final TriplePattern tp : bgp.getTriplePatterns()) {
+            final Node s = tp.asJenaTriple().getSubject();
+            final Node p = tp.asJenaTriple().getPredicate();
+            final Node o = tp.asJenaTriple().getObject();
+            if (s.isVariable()) {
+                if (conf.isLabelIRI(p) || conf.mapsToEdgeLabel(p) || conf.mapsToNode(o) || conf.mapsToLabel(o)) {
+                    certainNodes.add(s);
+                }
+            }
+            if (o.isVariable()) {
+                if (conf.mapsToEdgeLabel(p)){
+                    certainNodes.add(o);
+                }
+                if (conf.isLabelIRI(p)) {
+                    certainNodeLabels.add(o);
+                }
+                if (conf.mapsToProperty(p) || s.isNodeTriple()) {
+                    certainPropertyValues.add(o);
+                }
+            }
+            if (p.isVariable()) {
+                if (conf.mapsToNode(o)) {
+                    certainEdgeLabels.add(p);
+                }
+                if (o.isLiteral() || s.isNodeTriple()) {
+                    certainPropertyNames.add(p);
+                }
+            }
+        }
+
+        CypherQuery result = null;
+        final CypherVarGenerator gen = new CypherVarGenerator();
+        for (final TriplePattern tp : bgp.getTriplePatterns()) {
+            CypherQuery tpTranslation = translateTriplePattern(tp, conf, gen, certainNodes,
+                    certainEdgeLabels, certainNodeLabels, certainPropertyNames, certainPropertyValues).object1;
+            if (result == null){
+                result = tpTranslation;
+            } else {
+                result = CypherQueryCombinator.combine(result, tpTranslation, gen);
+            }
+        }
+        return new Pair<>(result, gen.getReverseMap());
+    }
+
+    @Override
     public Pair<CypherQuery, Map<CypherVar, Node>> translateTriplePattern(TriplePattern tp, LPG2RDFConfiguration conf) {
-        return translateTriplePattern(tp, conf, new HashSet<>(), new HashSet<>(), new HashSet<>(),
+        return translateTriplePattern(tp, conf, new CypherVarGenerator(), new HashSet<>(), new HashSet<>(), new HashSet<>(),
                 new HashSet<>(), new HashSet<>());
     }
 
     @Override
     public Pair<CypherQuery, Map<CypherVar, Node>> translateTriplePattern(final TriplePattern tp,
                                                                           final LPG2RDFConfiguration conf,
+                                                                          final CypherVarGenerator generator,
                                                                           final Set<Node> certainNodes,
                                                                           final Set<Node> certainEdgeLabels,
                                                                           final Set<Node> certainNodeLabels,
                                                                           final Set<Node> certainPropertyNames,
                                                                           final Set<Node> certainPropertyValues) {
-        final CypherVarGenerator generator = new CypherVarGenerator();
-        return new Pair<>(translateTriplePattern(tp, conf, generator, certainNodes, certainEdgeLabels,
+        return new Pair<>(handleTriplePattern(tp, conf, generator, certainNodes, certainEdgeLabels,
                 certainNodeLabels, certainPropertyNames, certainPropertyValues), generator.getReverseMap());
     }
 
+    /**
+     * This method handles the translation of a given triple pattern, distinguishing the cases where the
+     * triple pattern is nested or non-nested. If the triple pattern is non-nested, this method returns
+     * the direct translation of it. If the triple pattern is nested, it first translates the embedded
+     * triple pattern, and then adds conditions, iterators or return statements depending on the case.
+     */
+    protected static CypherQuery handleTriplePattern(final TriplePattern pattern,
+                                                     final LPG2RDFConfiguration configuration,
+                                                     final CypherVarGenerator gen,
+                                                     final Set<Node> certainNodes,
+                                                     final Set<Node> certainEdgeLabels,
+                                                     final Set<Node> certainNodeLabels,
+                                                     final Set<Node> certainPropertyNames,
+                                                     final Set<Node> certainPropertyValues) {
+        final Triple b = pattern.asJenaTriple();
+        final Node s = b.getSubject();
+        if (!s.isNodeTriple()) {
+            return translateTriplePattern(pattern, configuration, gen, certainNodes, certainEdgeLabels,
+                    certainNodeLabels, certainPropertyNames, certainPropertyValues, false);
+        }
+        final CypherQuery translation = translateTriplePattern(new TriplePatternImpl(s.getTriple()),
+                configuration, gen, certainNodes, certainEdgeLabels, certainNodeLabels, certainPropertyNames,
+                certainPropertyValues, true);
+        if (!(translation instanceof CypherMatchQuery)){
+            return null; //TODO throw exception
+        }
+        final CypherMatchQuery innerTPTranslation = (CypherMatchQuery) translation;
+        final Node p = b.getPredicate();
+        final Node o = b.getObject();
+
+        final CypherVar edgeVar = ((EdgeMatchClause) innerTPTranslation.getMatches().get(0)).getEdge();
+
+        final CypherQueryBuilder builder = new CypherQueryBuilder().addAll(innerTPTranslation);
+        final CypherVar k = new CypherVar("k");
+        if (configuration.mapsToProperty(p) && o.isLiteral()) {
+            builder.add(new EqualityExpression(new PropertyAccessExpression(edgeVar, configuration.unmapProperty(p)),
+                    new LiteralExpression(o.getLiteralValue().toString())));
+        } else if (p.isVariable() && o.isLiteral()) {
+            final CypherVar iterVar = gen.getAnonVar();
+            builder.add(new UnwindIteratorImpl(k, new KeysExpression(edgeVar),
+                    List.of(new EqualityExpression(new PropertyAccessWithVarExpression(edgeVar, k),
+                                new LiteralExpression(o.getLiteralValue().toString()))),
+                    List.of(k), iterVar))
+                    .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)));
+        } else if (configuration.mapsToProperty(p) && o.isVariable()) {
+            builder.add(new EXISTSExpression(new PropertyAccessExpression(edgeVar, configuration.unmapProperty(p))));
+            builder.add(new AliasedExpression(
+                    new PropertyAccessExpression(edgeVar, configuration.unmapProperty(p)), gen.getRetVar(o)));
+        } else if (p.isVariable() && o.isVariable()) {
+            final CypherVar iterVar = gen.getAnonVar();
+            builder.add(new UnwindIteratorImpl(k, new KeysExpression(edgeVar), null,
+                    List.of(k, new PropertyAccessWithVarExpression(edgeVar, k)), iterVar))
+                    .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
+                    .add(new AliasedExpression(new GetItemExpression(iterVar, 1), gen.getRetVar(o)));
+        } else {
+            return null;
+        }
+        return builder.build();
+    }
+
+    /**
+     * This method translates non-nested triple patterns into Cypher, leveraging knowledge of properties that
+     * the variables in the triple pattern may hold like boundedness to given LPG elements or edge-compatibility.
+     */
     protected static CypherQuery translateTriplePattern(final TriplePattern pattern,
-                                                        final LPG2RDFConfiguration configuration,
-                                                        final CypherVarGenerator gen,
-                                                        final Set<Node> certainNodes,
-                                                        final Set<Node> certainEdgeLabels,
-                                                        final Set<Node> certainNodeLabels,
-                                                        final Set<Node> certainPropertyNames,
-                                                        final Set<Node> certainPropertyValues) {
+                                                      final LPG2RDFConfiguration configuration,
+                                                      final CypherVarGenerator gen,
+                                                      final Set<Node> certainNodes,
+                                                      final Set<Node> certainEdgeLabels,
+                                                      final Set<Node> certainNodeLabels,
+                                                      final Set<Node> certainPropertyNames,
+                                                      final Set<Node> certainPropertyValues,
+                                                      final boolean isEdgeCompatible) {
         final Triple b = pattern.asJenaTriple();
         final Node s = b.getSubject();
         final Node p = b.getPredicate();
@@ -128,12 +247,12 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
             else if(p.isVariable() && o.isVariable()) {
                 if (configuration.mapsToNode(s)) {
                     return getNodeVarVar(s, p, o, configuration, gen, certainNodes, certainNodeLabels,
-                            certainPropertyNames, certainPropertyValues, certainEdgeLabels);
+                            certainPropertyNames, certainPropertyValues, certainEdgeLabels, isEdgeCompatible);
                 }
             }
         } else {
             return getVarVarVar(s, p, o, configuration, gen, certainNodes, certainNodeLabels,
-                    certainPropertyNames, certainPropertyValues, certainEdgeLabels);
+                    certainPropertyNames, certainPropertyValues, certainEdgeLabels, isEdgeCompatible);
         }
         return null;
     }
@@ -144,9 +263,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar nodeVar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(nodeVar))
-                .add(new NodeIDCondition(nodeVar, configuration.unmapNode(s).getId()))
-                .add(new NodeLabelCondition(nodeVar, configuration.unmapNodeLabel(o)))
-                .add(new CountLargerThanZeroReturnStatement(gen.getAnonVar()))
+                .add(new EqualityExpression(new VariableIDExpression(nodeVar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(nodeVar, configuration.unmapNodeLabel(o)))
+                .add(new AliasedExpression(new CountLargerThanZeroExpression(), gen.getAnonVar()))
                 .build();
     }
 
@@ -156,9 +276,11 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar nodeVar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(nodeVar))
-                .add(new NodeIDCondition(nodeVar, configuration.unmapNode(s).getId()))
-                .add(new PropertyValueCondition(nodeVar, configuration.unmapProperty(p), o.getLiteralValue().toString()))
-                .add(new CountLargerThanZeroReturnStatement(gen.getAnonVar()))
+                .add(new EqualityExpression(new VariableIDExpression(nodeVar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new EqualityExpression(new PropertyAccessExpression(nodeVar, configuration.unmapProperty(p)),
+                        new LiteralExpression(o.getLiteralValue().toString())))
+                .add(new AliasedExpression(new CountLargerThanZeroExpression(), gen.getAnonVar()))
                 .build();
     }
 
@@ -170,10 +292,12 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar tgtVar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(srcVar, edgeVar, tgtVar))
-                .add(new NodeIDCondition(srcVar, configuration.unmapNode(s).getId()))
-                .add(new EdgeLabelCondition(edgeVar, configuration.unmapEdgeLabel(p)))
-                .add(new NodeIDCondition(tgtVar, configuration.unmapNode(o).getId()))
-                .add(new CountLargerThanZeroReturnStatement(gen.getAnonVar()))
+                .add(new EqualityExpression(new VariableIDExpression(srcVar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(edgeVar, configuration.unmapEdgeLabel(p)))
+                .add(new EqualityExpression(new VariableIDExpression(tgtVar),
+                        new LiteralExpression(configuration.unmapNode(o).getId())))
+                .add(new AliasedExpression(new CountLargerThanZeroExpression(), gen.getAnonVar()))
                 .build();
     }
 
@@ -184,21 +308,31 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final String property = configuration.unmapProperty(p);
         final String literal = o.getLiteralValue().toString();
         final CypherVar svar = gen.getVarFor(s);
-        final CypherMatchQuery q = new CypherQueryBuilder()
-                                    .add(new NodeMatchClause(svar))
-                                    .add(new PropertyValueCondition(svar, property, literal))
-                                    .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                                    .build();
         if (certainNodes.contains(s)) {
-            return q;
+            return new CypherQueryBuilder()
+                    .add(new NodeMatchClause(svar))
+                    .add(new EqualityExpression(new PropertyAccessExpression(svar, property),
+                            new LiteralExpression(literal)))
+                    .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                    .build();
         }
         final List<CypherVar> sedge = gen.getEdgeVars(s);
+        final CypherVar marker = gen.getMarkerVar();
         return new CypherUnionQueryImpl(
-                q,
+                new CypherQueryBuilder()
+                        .add(new NodeMatchClause(svar))
+                        .add(new EqualityExpression(new PropertyAccessExpression(svar, property),
+                                new LiteralExpression(literal)))
+                        .add(new MarkerExpression(0, marker))
+                        .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                        .build(),
                 new CypherQueryBuilder()
                         .add(new EdgeMatchClause(sedge.get(0), sedge.get(1), sedge.get(2)))
-                        .add(new PropertyValueCondition(sedge.get(1), property, literal))
-                        .add(new TripleMapReturnStatement(sedge.get(0), sedge.get(1), sedge.get(2), gen.getRetVar(s)))
+                        .add(new EqualityExpression(new PropertyAccessExpression(sedge.get(1), property),
+                                new LiteralExpression(literal)))
+                        .add(new MarkerExpression(1, marker))
+                        .add(new AliasedExpression(new TripleMapExpression(sedge.get(0), sedge.get(1), sedge.get(2)),
+                                gen.getRetVar(s)))
                         .build());
     }
 
@@ -208,8 +342,8 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new NodeLabelCondition(svar, label))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
+                .add(new VariableLabelExpression(svar, label))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
                 .build();
     }
 
@@ -223,9 +357,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar ovar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(svar, evar, ovar))
-                .add(new NodeIDCondition(ovar, node.getId()))
-                .add(new EdgeLabelCondition(evar, relationship))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
+                .add(new EqualityExpression(new VariableIDExpression(ovar),
+                        new LiteralExpression(node.getId())))
+                .add(new VariableLabelExpression(evar, relationship))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
                 .build();
     }
 
@@ -234,8 +369,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(o);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new NodeIDCondition(svar, configuration.unmapNode(s).getId()))
-                .add(new LabelsReturnStatement(svar, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(svar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new AliasedExpression(new LabelsExpression(svar), gen.getRetVar(o)))
                 .build();
     }
 
@@ -246,9 +382,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar var = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(var))
-                .add(new NodeIDCondition(var, configuration.unmapNode(s).getId()))
-                .add(new PropertyEXISTSCondition(var, property))
-                .add(new PropertyValueReturnStatement(var, property, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(var),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new EXISTSExpression(new PropertyAccessExpression(var, property)))
+                .add(new AliasedExpression(new PropertyAccessExpression(var, property), gen.getRetVar(o)))
                 .build();
     }
 
@@ -260,9 +397,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar yvar = gen.getVarFor(o);
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(xvar, evar, yvar))
-                .add(new NodeIDCondition(xvar, configuration.unmapNode(s).getId()))
-                .add(new EdgeLabelCondition(evar, configuration.unmapEdgeLabel(p)))
-                .add(new VariableReturnStatement(yvar, gen.getRetVar(o)))
+                .add(new EqualityExpression(new VariableIDExpression(xvar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(evar, configuration.unmapEdgeLabel(p)))
+                .add(new AliasedExpression(yvar, gen.getRetVar(o)))
                 .build();
     }
 
@@ -273,9 +411,11 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar yvar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(xvar, evar, yvar))
-                .add(new NodeIDCondition(xvar, configuration.unmapNode(s).getId()))
-                .add(new NodeIDCondition(yvar, configuration.unmapNode(o).getId()))
-                .add(new RelationshipTypeReturnStatement(evar, gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(xvar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new EqualityExpression(new VariableIDExpression(yvar),
+                        new LiteralExpression(configuration.unmapNode(o).getId())))
+                .add(new AliasedExpression(new TypeExpression(evar), gen.getRetVar(p)))
                 .build();
     }
 
@@ -288,11 +428,14 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar innerVar = new CypherVar("k");
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(xvar))
-                .add(new NodeIDCondition(xvar, configuration.unmapNode(s).getId()))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+xvar+")",
-                        Collections.singletonList(new PropertyValueConditionWithVar(xvar, innerVar, literal)),
-                        Collections.singletonList("k"), iterVar))
-                .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(xvar),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new UnwindIteratorImpl(innerVar, new KeysExpression(xvar),
+                        List.of(new EqualityExpression(
+                                new PropertyAccessWithVarExpression(xvar, innerVar),
+                                new LiteralExpression(literal))),
+                        List.of(innerVar), iterVar))
+                .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
                 .build();
     }
 
@@ -301,9 +444,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar node = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(node))
-                .add(new NodeIDCondition(node, configuration.unmapNode(s).getId()))
-                .add(new NodeLabelCondition(node, configuration.unmapNodeLabel(o)))
-                .add(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(node),
+                        new LiteralExpression(configuration.unmapNode(s).getId())))
+                .add(new VariableLabelExpression(node, configuration.unmapNodeLabel(o)))
+                .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
                 .build();
     }
 
@@ -312,8 +456,8 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new LabelsReturnStatement(svar, gen.getRetVar(o)))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(new LabelsExpression(svar), gen.getRetVar(o)))
                 .build();
     }
 
@@ -326,9 +470,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar ovar = gen.getVarFor(o);
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(svar, evar, ovar))
-                .add(new EdgeLabelCondition(evar, relationship))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new VariableReturnStatement(ovar, gen.getRetVar(o)))
+                .add(new VariableLabelExpression(evar, relationship))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(ovar, gen.getRetVar(o)))
                 .build();
     }
 
@@ -337,24 +481,33 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
                                                 final Set<Node> certainNodes) {
         final String property = configuration.unmapProperty(p);
         final CypherVar svar = gen.getVarFor(s);
-        final CypherMatchQuery q = new CypherQueryBuilder()
-                                        .add(new NodeMatchClause(svar))
-                                        .add(new PropertyEXISTSCondition(svar, property))
-                                        .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                                        .add(new PropertyValueReturnStatement(svar, property, gen.getRetVar(o)))
-                                        .build();
         if (certainNodes.contains(s)) {
-            return q;
+            return new CypherQueryBuilder()
+                    .add(new NodeMatchClause(svar))
+                    .add(new EXISTSExpression(new PropertyAccessExpression(svar, property)))
+                    .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                    .add(new AliasedExpression(new PropertyAccessExpression(svar, property),
+                            gen.getRetVar(o)))
+                    .build();
         }
         final List<CypherVar> sedge = gen.getEdgeVars(s);
+        final CypherVar marker = gen.getMarkerVar();
         return new CypherUnionQueryImpl(
                 new CypherQueryBuilder()
                         .add(new EdgeMatchClause(sedge.get(0), sedge.get(1), sedge.get(2)))
-                        .add(new PropertyEXISTSCondition(sedge.get(1), property))
-                        .add(new TripleMapReturnStatement(sedge.get(0), sedge.get(1), sedge.get(2), gen.getRetVar(s)))
-                        .add(new PropertyValueReturnStatement(sedge.get(1), property, gen.getRetVar(o)))
+                        .add(new EXISTSExpression(new PropertyAccessExpression(sedge.get(1), property)))
+                        .add(new MarkerExpression(0, marker))
+                        .add(new AliasedExpression(new TripleMapExpression(sedge.get(0), sedge.get(1), sedge.get(2)), gen.getRetVar(s)))
+                        .add(new AliasedExpression(new PropertyAccessExpression(sedge.get(1), property), gen.getRetVar(o)))
                         .build(),
-                q
+                new CypherQueryBuilder()
+                        .add(new NodeMatchClause(svar))
+                        .add(new EXISTSExpression(new PropertyAccessExpression(svar, property)))
+                        .add(new MarkerExpression(1, marker))
+                        .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                        .add(new AliasedExpression(new PropertyAccessExpression(svar, property),
+                                gen.getRetVar(o)))
+                        .build()
         );
     }
 
@@ -363,9 +516,9 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar svar = gen.getVarFor(s);
         return new CypherQueryBuilder()
                 .add(new NodeMatchClause(svar))
-                .add(new NodeLabelCondition(svar, configuration.unmapNodeLabel(o)))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
+                .add(new VariableLabelExpression(svar, configuration.unmapNodeLabel(o)))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
                 .build();
     }
 
@@ -376,9 +529,10 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar yvar = gen.getAnonVar();
         return new CypherQueryBuilder()
                 .add(new EdgeMatchClause(svar, pvar, yvar))
-                .add(new NodeIDCondition(yvar, configuration.unmapNode(o).getId()))
-                .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                .add(new RelationshipTypeReturnStatement(pvar, gen.getRetVar(p)))
+                .add(new EqualityExpression(new VariableIDExpression(yvar),
+                        new LiteralExpression(configuration.unmapNode(o).getId())))
+                .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                .add(new AliasedExpression(new TypeExpression(pvar), gen.getRetVar(p)))
                 .build();
     }
 
@@ -390,28 +544,43 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
         final CypherVar iterVar = gen.getAnonVar();
         final CypherVar iterVar2 = gen.getAnonVar();
         final String literal = o.getLiteralValue().toString();
-        final CypherMatchQuery q = new CypherQueryBuilder()
-                                        .add(new NodeMatchClause(svar))
-                                        .add(new UnwindIteratorImpl(innerVar, "KEYS("+svar+")",
-                                                List.of(new PropertyValueConditionWithVar(svar, innerVar, literal)),
-                                                Collections.singletonList("k"), iterVar))
-                                        .add(new VariableReturnStatement(svar, gen.getRetVar(s)))
-                                        .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
-                                        .build();
         if (certainNodes.contains(s)) {
-            return q;
+            return new CypherQueryBuilder()
+                    .add(new NodeMatchClause(svar))
+                    .add(new UnwindIteratorImpl(innerVar, new KeysExpression(svar),
+                            List.of(new EqualityExpression(
+                                    new PropertyAccessWithVarExpression(svar, innerVar),
+                                    new LiteralExpression(literal))),
+                            List.of(innerVar), iterVar))
+                    .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                    .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
+                    .build();
         }
         final List<CypherVar> sedge = gen.getEdgeVars(s);
+        final CypherVar marker = gen.getMarkerVar();
         return new CypherUnionQueryImpl(
                 new CypherQueryBuilder()
                         .add(new EdgeMatchClause(sedge.get(0), sedge.get(1), sedge.get(2)))
-                        .add(new UnwindIteratorImpl(innerVar, "KEYS("+sedge.get(1)+")",
-                                List.of(new PropertyValueConditionWithVar(sedge.get(1), innerVar, literal)),
-                                Collections.singletonList("k"), iterVar2))
-                        .add(new TripleMapReturnStatement(sedge.get(0), sedge.get(1), sedge.get(2), gen.getRetVar(s)))
-                        .add(new VariableGetItemReturnStatement(iterVar2 , 0, gen.getRetVar(p)))
+                        .add(new UnwindIteratorImpl(innerVar, new KeysExpression(sedge.get(1)),
+                                List.of(new EqualityExpression(
+                                        new PropertyAccessWithVarExpression(sedge.get(1), innerVar),
+                                        new LiteralExpression(literal))), List.of(innerVar), iterVar2))
+                        .add(new MarkerExpression(0, marker))
+                        .add(new AliasedExpression(new TripleMapExpression(sedge.get(0), sedge.get(1), sedge.get(2)),
+                                gen.getRetVar(s)))
+                        .add(new AliasedExpression(new GetItemExpression(iterVar2 , 0), gen.getRetVar(p)))
                         .build(),
-                q
+                new CypherQueryBuilder()
+                        .add(new NodeMatchClause(svar))
+                        .add(new UnwindIteratorImpl(innerVar, new KeysExpression(svar),
+                                List.of(new EqualityExpression(
+                                        new PropertyAccessWithVarExpression(svar, innerVar),
+                                        new LiteralExpression(literal))),
+                                List.of(innerVar), iterVar))
+                        .add(new MarkerExpression(1, marker))
+                        .add(new AliasedExpression(svar, gen.getRetVar(s)))
+                        .add(new AliasedExpression(new GetItemExpression(iterVar, 0), gen.getRetVar(p)))
+                        .build()
         );
     }
 
@@ -421,60 +590,94 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
                                                final Set<Node> certainNodeLabels,
                                                final Set<Node> certainPropertyNames,
                                                final Set<Node> certainPropertyValues,
-                                               final Set<Node> certainEdgeLabels) {
+                                               final Set<Node> certainEdgeLabels,
+                                               final boolean isEdgeCompatible) {
         final LPGNode node = configuration.unmapNode(s);
         final CypherVar pvar = gen.getVarFor(p);
         final CypherVar ovar = gen.getVarFor(o);
         final CypherVar a1 = gen.getAnonVar();
-        if (certainNodes.contains(o)){
+        //In general, we shouldn't reuse parts of queries, because it messes with the order of anonymous variables
+        if (certainNodes.contains(o) || isEdgeCompatible){
             return new CypherQueryBuilder()
-                    //this rule in the paper uses pvar and ovar, not anonymous vars so this query can't be reused
                     .add(new EdgeMatchClause(a1, pvar, ovar))
-                    .add(new NodeIDCondition(a1, node.getId()))
-                    .add(new RelationshipTypeReturnStatement(pvar, gen.getRetVar(p)))
-                    .add(new VariableReturnStatement(ovar, gen.getRetVar(o)))
+                    .add(new EqualityExpression(new VariableIDExpression(a1),
+                            new LiteralExpression(node.getId())))
+                    .add(new AliasedExpression(new TypeExpression(pvar), gen.getRetVar(p)))
+                    .add(new AliasedExpression(ovar, gen.getRetVar(o)))
                     .build();
         }
-
-        final CypherVar a2 = gen.getAnonVar();
-        final CypherMatchQuery qLabels = new CypherQueryBuilder()
-                .add(new NodeMatchClause(a1))
-                .add(new NodeIDCondition(a1, node.getId()))
-                .addReturn(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
-                .addReturn(new LabelsReturnStatement(a1, gen.getRetVar(o)))
-                .build();
         if (certainNodeLabels.contains(o)){
-            return qLabels;
+            return new CypherQueryBuilder()
+                    .add(new NodeMatchClause(a1))
+                    .add(new EqualityExpression(new VariableIDExpression(a1),
+                            new LiteralExpression(node.getId())))
+                    .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
+                    .add(new AliasedExpression(new LabelsExpression(a1), gen.getRetVar(o)))
+                    .build();
         }
-
-        final CypherVar iterVar = gen.getAnonVar();
+        final CypherVar a2 = gen.getAnonVar();
+        final CypherVar innerVar = new CypherVar("k");
+        if (certainPropertyNames.contains(p) || certainPropertyValues.contains(o)){
+            return new CypherQueryBuilder()
+                    .add(new NodeMatchClause(a1))
+                    .add(new EqualityExpression(new VariableIDExpression(a1),
+                            new LiteralExpression(node.getId())))
+                    .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a1), null,
+                            List.of(innerVar, new PropertyAccessWithVarExpression(a1, innerVar)), a2))
+                    .add(new AliasedExpression(new GetItemExpression(a2, 0), gen.getRetVar(p)))
+                    .add(new AliasedExpression(new GetItemExpression(a2, 1), gen.getRetVar(o)))
+                    .build();
+        }
+        final CypherVar a3 = gen.getAnonVar();
+        if (certainEdgeLabels.contains(p)){
+            return new CypherQueryBuilder()
+                    .add(new EdgeMatchClause(a1, a2, a3))
+                    .add(new EqualityExpression(new VariableIDExpression(a1),
+                            new LiteralExpression(node.getId())))
+                    .add(new AliasedExpression(new TypeExpression(a2), gen.getRetVar(p)))
+                    .add(new AliasedExpression(a3, gen.getRetVar(o)))
+                    .build();
+        }
+        if (certainEdgeLabels.contains(p)){
+            return new CypherQueryBuilder()
+                    .add(new EdgeMatchClause(a1, a2, a3))
+                    .add(new EqualityExpression(new VariableIDExpression(a1),
+                            new LiteralExpression(node.getId())))
+                    .add(new AliasedExpression(new TypeExpression(a2), gen.getRetVar(p)))
+                    .add(new AliasedExpression(a3, gen.getRetVar(o)))
+                    .build();
+        }
         final CypherVar a4 = gen.getAnonVar();
         final CypherVar a5 = gen.getAnonVar();
         final CypherVar a6 = gen.getAnonVar();
-        final CypherMatchQuery qEdges = new CypherQueryBuilder()
-                .add(new EdgeMatchClause(a4, a5, a6))
-                .add(new NodeIDCondition(a4, node.getId()))
-                .add(new RelationshipTypeReturnStatement(a5, gen.getRetVar(p)))
-                .add(new VariableReturnStatement(a6, gen.getRetVar(o)))
-                .build();
-        if (certainEdgeLabels.contains(p)){
-            return qEdges;
-        }
-
-        final CypherVar innerVar = new CypherVar("k");
-        final CypherMatchQuery qProperties = new CypherQueryBuilder()
-                .add(new NodeMatchClause(a2))
-                .add(new NodeIDCondition(a2, node.getId()))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+a2+")", null,
-                        List.of("k", a2+"[k]"), iterVar))
-                .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
-                .add(new VariableGetItemReturnStatement(iterVar, 1, gen.getRetVar(o)))
-                .build();
-        if (certainPropertyNames.contains(p) || certainPropertyValues.contains(o)){
-            return qProperties;
-        }
-
-        return new CypherUnionQueryImpl(qLabels, qProperties, qEdges);
+        final CypherVar marker = gen.getMarkerVar();
+        return new CypherUnionQueryImpl(
+                new CypherQueryBuilder()
+                        .add(new NodeMatchClause(a1))
+                        .add(new EqualityExpression(new VariableIDExpression(a1),
+                                new LiteralExpression(node.getId())))
+                        .add(new MarkerExpression(0, marker))
+                        .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
+                        .add(new AliasedExpression(new LabelsExpression(a1), gen.getRetVar(o)))
+                        .build(),
+                new CypherQueryBuilder()
+                        .add(new NodeMatchClause(a2))
+                        .add(new EqualityExpression(new VariableIDExpression(a2),
+                                new LiteralExpression(node.getId())))
+                        .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a2), null,
+                                List.of(innerVar, new PropertyAccessWithVarExpression(a2, innerVar)), a3))
+                        .add(new MarkerExpression(1, marker))
+                        .add(new AliasedExpression(new GetItemExpression(a3, 0), gen.getRetVar(p)))
+                        .add(new AliasedExpression(new GetItemExpression(a3, 1), gen.getRetVar(o)))
+                        .build(),
+                new CypherQueryBuilder()
+                        .add(new EdgeMatchClause(a4, a5, a6))
+                        .add(new EqualityExpression(new VariableIDExpression(a4),
+                                new LiteralExpression(node.getId())))
+                        .add(new MarkerExpression(2, marker))
+                        .add(new AliasedExpression(new TypeExpression(a5), gen.getRetVar(p)))
+                        .add(new AliasedExpression(a6, gen.getRetVar(o)))
+                        .build());
     }
 
     protected static CypherQuery getVarVarVar(final Node s, final Node p, final Node o,
@@ -483,60 +686,120 @@ public class SPARQLStar2CypherTranslatorImpl implements SPARQLStar2CypherTransla
                                               final Set<Node> certainNodes,
                                               final Set<Node> certainNodeLabels,
                                               final Set<Node> certainPropertyNames,
-                                              final Set<Node> certainPropertyValues, Set<Node> certainEdgeLabels) {
+                                              final Set<Node> certainPropertyValues,
+                                              final Set<Node> certainEdgeLabels,
+                                              final boolean isEdgeCompatible) {
         final CypherVar a1 = gen.getAnonVar();
         final CypherVar a2 = gen.getAnonVar();
         final CypherVar a3 = gen.getAnonVar();
-        final CypherMatchQuery qEdges = new CypherQueryBuilder()
-                .add(new EdgeMatchClause(a1, a2, a3))
-                .add(new VariableReturnStatement(a1, gen.getRetVar(s)))
-                .add(new RelationshipTypeReturnStatement(a2, gen.getRetVar(p)))
-                .add(new VariableReturnStatement(a3, gen.getRetVar(o)))
-                .build();
-        if ((certainNodes.contains(s) && certainNodes.contains(o)) || certainEdgeLabels.contains(p)) {
-            return qEdges;
+        if ((certainNodes.contains(s) && certainNodes.contains(o)) || certainEdgeLabels.contains(p)
+        || isEdgeCompatible) {
+            return new CypherQueryBuilder()
+                    .add(new EdgeMatchClause(a1, a2, a3))
+                    .add(new AliasedExpression(a1, gen.getRetVar(s)))
+                    .add(new AliasedExpression(new TypeExpression(a2), gen.getRetVar(p)))
+                    .add(new AliasedExpression(a3, gen.getRetVar(o)))
+                    .build();
         }
 
         final CypherVar a4 = gen.getAnonVar();
-        final CypherMatchQuery qNodeLabels = new CypherQueryBuilder()
-                .add(new NodeMatchClause(a4))
-                .add(new VariableReturnStatement(a4, gen.getRetVar(s)))
-                .add(new LiteralValueReturnStatement("label", gen.getRetVar(p)))
-                .add(new LabelsReturnStatement(a4, gen.getRetVar(o)))
-                .build();
         if (certainNodeLabels.contains(o)) {
-            return qNodeLabels;
+            return new CypherQueryBuilder()
+                    .add(new NodeMatchClause(a4))
+                    .add(new AliasedExpression(a4, gen.getRetVar(s)))
+                    .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
+                    .add(new AliasedExpression(new LabelsExpression(a4), gen.getRetVar(o)))
+                    .build();
         }
 
         final CypherVar a5 = gen.getAnonVar();
-        final CypherVar iterVar = gen.getAnonVar();
+        final CypherVar a6 = gen.getAnonVar();
+        final CypherVar innerVar = new CypherVar("k");
+        final CypherVar marker = gen.getMarkerVar();
+        if (certainNodes.contains(s)){
+            return new CypherUnionQueryImpl(
+                    new CypherQueryBuilder()
+                            .add(new EdgeMatchClause(a1, a2, a3))
+                            .add(new MarkerExpression(0, marker))
+                            .add(new AliasedExpression(a1, gen.getRetVar(s)))
+                            .add(new AliasedExpression(new TypeExpression(a2), gen.getRetVar(p)))
+                            .add(new AliasedExpression(a3, gen.getRetVar(o)))
+                            .build(),
+                    new CypherQueryBuilder()
+                            .add(new NodeMatchClause(a4))
+                            .add(new MarkerExpression(1, marker))
+                            .add(new AliasedExpression(a4, gen.getRetVar(s)))
+                            .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
+                            .add(new AliasedExpression(new LabelsExpression(a4), gen.getRetVar(o)))
+                            .build(),
+                    new CypherQueryBuilder()
+                            .add(new NodeMatchClause(a5))
+                            .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a5), null,
+                                    List.of(innerVar, new PropertyAccessWithVarExpression(a5, innerVar)), a6))
+                            .add(new MarkerExpression(2, marker))
+                            .add(new AliasedExpression(a5, gen.getRetVar(s)))
+                            .add(new AliasedExpression(new GetItemExpression(a6, 0), gen.getRetVar(p)))
+                            .add(new AliasedExpression(new GetItemExpression(a6, 1), gen.getRetVar(o)))
+                            .build());
+        }
+        if (certainPropertyNames.contains(p) || certainPropertyValues.contains(o)) {
+            return new CypherUnionQueryImpl(
+                    new CypherQueryBuilder()
+                            .add(new NodeMatchClause(a1))
+                            .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a1), null,
+                                    List.of(innerVar, new PropertyAccessWithVarExpression(a1, innerVar)), a2))
+                            .add(new MarkerExpression(0, marker))
+                            .add(new AliasedExpression(a1, gen.getRetVar(s)))
+                            .add(new AliasedExpression(new GetItemExpression(a2, 0), gen.getRetVar(p)))
+                            .add(new AliasedExpression(new GetItemExpression(a2, 1), gen.getRetVar(o)))
+                            .build(),
+                    new CypherQueryBuilder()
+                            .add(new EdgeMatchClause(a3, a4, a5))
+                            .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a4), null,
+                                    List.of(innerVar, new PropertyAccessWithVarExpression(a4, innerVar)), a6))
+                            .add(new MarkerExpression(1, marker))
+                            .add(new AliasedExpression(new TripleMapExpression(a3, a4, a5), gen.getRetVar(s)))
+                            .add(new AliasedExpression(new GetItemExpression(a6, 0), gen.getRetVar(p)))
+                            .add(new AliasedExpression(new GetItemExpression(a6, 1), gen.getRetVar(o)))
+                            .build());
+        }
+
         final CypherVar a7 = gen.getAnonVar();
         final CypherVar a8 = gen.getAnonVar();
         final CypherVar a9 = gen.getAnonVar();
-        final CypherVar iterVar2 = gen.getAnonVar();
-        final CypherVar innerVar = new CypherVar("k");
-        final CypherMatchQuery qNodeProperties = new CypherQueryBuilder()
-                .add(new NodeMatchClause(a5))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+a5+")", null,
-                        List.of("k", a5+"[k]"), iterVar))
-                .add(new VariableReturnStatement(a5, gen.getRetVar(s)))
-                .add(new VariableGetItemReturnStatement(iterVar, 0, gen.getRetVar(p)))
-                .add(new VariableGetItemReturnStatement(iterVar, 1, gen.getRetVar(o)))
-                .build();
-        final CypherMatchQuery qEdgeProperties = new CypherQueryBuilder()
-                .add(new EdgeMatchClause(a7, a8, a9))
-                .add(new UnwindIteratorImpl(innerVar, "KEYS("+a8+")", null,
-                        List.of("k", a8+"[k]"), iterVar2))
-                .add(new TripleMapReturnStatement(a7, a8, a9, gen.getRetVar(s)))
-                .add(new VariableGetItemReturnStatement(iterVar2, 0, gen.getRetVar(p)))
-                .add(new VariableGetItemReturnStatement(iterVar2, 1, gen.getRetVar(o)))
-                .build();
-        if (certainNodes.contains(s)){
-            return new CypherUnionQueryImpl(qEdges, qNodeLabels, qNodeProperties);
-        }
-        if (certainPropertyNames.contains(p) || certainPropertyValues.contains(o)) {
-            return new CypherUnionQueryImpl(qNodeProperties, qEdgeProperties);
-        }
-        return new CypherUnionQueryImpl(qEdges, qNodeLabels, qNodeProperties, qEdgeProperties);
+        final CypherVar a10 = gen.getAnonVar();
+        return new CypherUnionQueryImpl(
+                new CypherQueryBuilder()
+                        .add(new EdgeMatchClause(a1, a2, a3))
+                        .add(new MarkerExpression(0, marker))
+                        .add(new AliasedExpression(a1, gen.getRetVar(s)))
+                        .add(new AliasedExpression(new TypeExpression(a2), gen.getRetVar(p)))
+                        .add(new AliasedExpression(a3, gen.getRetVar(o)))
+                        .build(),
+                new CypherQueryBuilder()
+                        .add(new NodeMatchClause(a4))
+                        .add(new MarkerExpression(1, marker))
+                        .add(new AliasedExpression(a4, gen.getRetVar(s)))
+                        .add(new AliasedExpression(new LiteralExpression("label"), gen.getRetVar(p)))
+                        .add(new AliasedExpression(new LabelsExpression(a4), gen.getRetVar(o)))
+                        .build(),
+                new CypherQueryBuilder()
+                        .add(new NodeMatchClause(a5))
+                        .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a5), null,
+                                List.of(innerVar, new PropertyAccessWithVarExpression(a5, innerVar)), a6))
+                        .add(new MarkerExpression(2, marker))
+                        .add(new AliasedExpression(a5, gen.getRetVar(s)))
+                        .add(new AliasedExpression(new GetItemExpression(a6, 0), gen.getRetVar(p)))
+                        .add(new AliasedExpression(new GetItemExpression(a6, 1), gen.getRetVar(o)))
+                        .build(),
+                new CypherQueryBuilder()
+                        .add(new EdgeMatchClause(a7, a8, a9))
+                        .add(new UnwindIteratorImpl(innerVar, new KeysExpression(a8), null,
+                                List.of(innerVar, new PropertyAccessWithVarExpression(a8, innerVar)), a10))
+                        .add(new MarkerExpression(3, marker))
+                        .add(new AliasedExpression(new TripleMapExpression(a7, a8, a9), gen.getRetVar(s)))
+                        .add(new AliasedExpression(new GetItemExpression(a10, 0), gen.getRetVar(p)))
+                        .add(new AliasedExpression(new GetItemExpression(a10, 1), gen.getRetVar(o)))
+                        .build());
     }
 }
